--- a/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
+++ b/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
@@ -158,6 +158,7 @@
     <Content Include="Content\jquery-ui-1.10.3.custom.css" />
     <Content Include="Content\jquery-ui-1.10.3.custom.min.css" />
     <Content Include="Global.asax" />
+    <Content Include="LICENSE.txt" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Views\Account\Login.aspx" />
     <Content Include="Views\Contacts\Create.aspx" />
