--- a/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
+++ b/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ContactsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MatterContactController.cs" />
     <Compile Include="Controllers\MattersController.cs" />
     <Compile Include="Controllers\MatterTagsController.cs" />
     <Compile Include="Controllers\ResponsibleUsersController.cs" />
@@ -139,11 +140,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserCache.cs" />
     <Compile Include="ViewModels\Contacts\ContactViewModel.cs" />
+    <Compile Include="ViewModels\Contacts\SelectableContactViewModel.cs" />
     <Compile Include="ViewModels\CoreViewModel.cs" />
     <Compile Include="ViewModels\DateOnlyViewModelBase.cs" />
+    <Compile Include="ViewModels\Matters\MatterContactViewModel.cs" />
     <Compile Include="ViewModels\Matters\MatterTagViewModel.cs" />
     <Compile Include="ViewModels\Matters\MatterViewModel.cs" />
     <Compile Include="ViewModels\Matters\ResponsibleUserViewModel.cs" />
+    <Compile Include="ViewModels\Matters\SelectableMatterContactViewModel.cs" />
     <Compile Include="ViewModels\PermissionsViewModel.cs" />
     <Compile Include="ViewModels\Security\AreaViewModel.cs" />
     <Compile Include="ViewModels\Security\AreaAclViewModel.cs" />
@@ -161,10 +165,17 @@
     <Content Include="LICENSE.txt" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Views\Account\Login.aspx" />
+    <Content Include="Views\Contacts\Assign.aspx" />
     <Content Include="Views\Contacts\Create.aspx" />
     <Content Include="Views\Contacts\Details.aspx" />
     <Content Include="Views\Contacts\Edit.aspx" />
     <Content Include="Views\Contacts\Index.aspx" />
+    <Content Include="Views\MatterContact\AssignContact.aspx" />
+    <Content Include="Views\MatterContact\Delete.aspx" />
+    <Content Include="Views\MatterContact\Details.aspx" />
+    <Content Include="Views\MatterContact\Edit.aspx" />
+    <Content Include="Views\MatterContact\SelectContactToAssign.aspx" />
+    <Content Include="Views\Matters\Contacts.aspx" />
     <Content Include="Views\Matters\Create.aspx" />
     <Content Include="Views\Matters\Details.aspx" />
     <Content Include="Views\Matters\Edit.aspx" />
@@ -189,6 +200,7 @@
     <Content Include="Views\Shared\DisplayTemplates\PermissionViewModel.ascx" />
     <Content Include="Views\Shared\EditorTemplates\PermissionViewModel.ascx" />
     <Content Include="Views\Shared\InsufficientRights.aspx" />
+    <Content Include="Views\Shared\InvalidRequest.aspx" />
     <Content Include="Views\Users\Create.aspx" />
     <Content Include="Views\Users\Details.aspx" />
     <Content Include="Views\Users\Edit.aspx" />
