--- a/OpenLawOffice.Server/OpenLawOffice.Server.Core/OpenLawOffice.Server.Core.csproj
+++ b/OpenLawOffice.Server/OpenLawOffice.Server.Core/OpenLawOffice.Server.Core.csproj
@@ -124,12 +124,12 @@
     <Compile Include="DBOs\Security\User.cs" />
     <Compile Include="DBOs\Tagging\TagBase.cs" />
     <Compile Include="DBOs\Tagging\TagCategory.cs" />
-    <Compile Include="DBOs\Tasking\Task.cs" />
-    <Compile Include="DBOs\Tasking\TaskAssignedContact.cs" />
-    <Compile Include="DBOs\Tasking\TaskMatter.cs" />
-    <Compile Include="DBOs\Tasking\TaskResponsibleUser.cs" />
-    <Compile Include="DBOs\Tasking\TaskTag.cs" />
-    <Compile Include="DBOs\Tasking\TaskTime.cs" />
+    <Compile Include="DBOs\Tasks\Task.cs" />
+    <Compile Include="DBOs\Tasks\TaskAssignedContact.cs" />
+    <Compile Include="DBOs\Tasks\TaskMatter.cs" />
+    <Compile Include="DBOs\Tasks\TaskResponsibleUser.cs" />
+    <Compile Include="DBOs\Tasks\TaskTag.cs" />
+    <Compile Include="DBOs\Tasks\TaskTime.cs" />
     <Compile Include="DBOs\Timing\Time.cs" />
     <Compile Include="Host.cs" />
     <Compile Include="Installation\Database.cs" />
